hopefully fixed scrolling on small mobile screens

--- a/vite/style.css
+++ b/vite/style.css
@@ -153,16 +153,16 @@ section {
     --flex-direction: column;
     font-size: 16px;
   }
-}
-
-@media screen and (max-width: 315px) {
-  :root {
-    font-size: 14px;
-  }
 
   .sm\:w-screen {
     width: 100vw;
     margin-left: -1rem;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  :root {
+    font-size: 14px;
   }
 }
 
